# morseformer

./: .gitignore  CHANGELOG.md  HANDOFF_RUST_UI.md  LICENSE  MODEL_CARD.md  NEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/bench/: callsign_lcwo_001.txt  contest_synth.txt  de-gaulle.txt  jme-voyais-dejà.txt  manifest.jsonl  pacino.txt  websdr.txt
data/corpus/: fav22_blocks.jsonl  fetch.py
demo/: README.md  app.py
eval/: bench_latency.py  bench_lcwo.py  benchmark.py  cli.py  datasets.py  metrics.py  release_gate.py  release_gate_v1.json  release_gate_v2.json  snr_ladder.py
morse_synth/: README.md  __init__.py  channel.py  core.py  keying.py  operator.py
morseformer/: __init__.py  onnx_export.py
morseformer/baselines/: __init__.py  neural.py  rule_based.py
morseformer/cli/: __init__.py  __main__.py  decode.py  gui.py  live.py  models.py  presets.py  registry.py
morseformer/core/: __init__.py  morse_table.py  tokenizer.py
morseformer/data/: __init__.py  itu_prefixes.py  lm_dataset.py  real_audio.py  synthetic.py  text.py  validation.py
morseformer/decoding/: __init__.py  callsign_prior.py  lm_ngram.py  postprocess.py  streaming.py  word_splitter.py
morseformer/features/: __init__.py  frontend.py
morseformer/gui/: __init__.py  __main__.py  app.py  audio_capture.py  decoder_worker.py  file_tab.py  live_tab.py  settings_panel.py  waveform.py
morseformer/gui/panels/: settings_panel.py
morseformer/gui/services/: callsigns.py  config_store.py  exporter.py  formatting.py  logbook.py  recorder.py
morseformer/gui/tabs/: file_tab.py  live_tab.py
morseformer/gui/widgets/: transcript_view.py
morseformer/models/: __init__.py  acoustic.py  conformer.py  fusion.py  lm.py  rnnt.py
morseformer/train/: __init__.py  acoustic.py  ema.py  lm_loop.py  rnnt_loop.py  scheduler.py
reports/: README.md  breakthrough_paths_2026-05-23.html  technical_debt_2026-05-18.html
reports/wpx_diagnosis_2026_05_31/: FACTORIAL_2026_06_02.md  OPTION_C_RESULTS.md  REPORT.md  option_c_results.txt  summary.json
rust/: README.md
rust/morseformer-rt/: Cargo.toml
rust/morseformer-rt/src/: main.rs
rust/morseformer-ui/: package-lock.json  package.json
rust/morseformer-ui/src/: index.html  main.js  styles.css
rust/morseformer-ui/src-tauri/: Cargo.toml  tauri.conf.json
rust/morseformer-ui/src-tauri/capabilities/: default.json
rust/morseformer-ui/src-tauri/resources/: README.txt
rust/morseformer-ui/src-tauri/src/: main.rs
rust/scripts/: package-windows.ps1
scripts/: align_ebook_cw.py  align_fav22.py  audit_real_qso.py  bench_word_gap.py  build_callsign_bench.py  compare_onnx.py  decode_audio.py  decode_fav22.py  decode_live.py  eval_false_positive.py  eval_fusion.py  eval_fusion_realaudio.py  eval_phase_3_4_french.py  eval_rnnt.py  export_onnx.py  extend_tokenizer_46_to_49.py  force_align_real_qso.py  parse_fav22_pdf.py  plot_train_log.py  prepare_real_qso.py  prepare_release.py  prepare_rust_features.py  push_to_hub.py  test_release.py  train_acoustic.py  train_lm.py  train_ngram_amateur.py  train_rnnt.py
tests/: test_acoustic.py  test_amp.py  test_baseline.py  test_callsign_prior.py  test_channel.py  test_cli.py  test_conformer.py  test_demo.py  test_duration_fit.py  test_e2e.py  test_ema.py  test_frontend.py  test_fusion.py  test_gui_services.py  test_gui_smoke.py  test_lm.py  test_lm_ngram.py  test_metrics.py  test_morse_table.py  test_neural_baseline.py  test_onnx_export.py  test_operator.py  test_phase2_1.py  test_phase2_2_preset.py  test_plot_train_log.py  test_postprocess.py  test_real_audio_augment.py  test_release_gate.py  test_resume.py  test_rnnt.py  test_rnnt_loop.py  test_scheduler.py  test_snr_ladder.py  test_snr_ladder_validation.py  test_streaming.py  test_synth.py  test_synthetic.py  test_text.py  test_tokenizer.py  test_train_loop.py  (+2 more)
