[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morseformer"
version = "0.6.4"
description = "Open-source transformer-based Morse/CW decoder with a built-in ham-specialised language model"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "sderhy", email = "sderhy@gmail.com" }]
keywords = [
    "morse",
    "cw",
    "amateur-radio",
    "ham-radio",
    "transformer",
    "speech-to-text",
    "dsp",
    "ctc",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.1",
    "torchaudio>=2.1",
    "huggingface_hub>=0.25",
]

[project.optional-dependencies]
live = ["pasimple>=0.0.3"]
gui = ["PySide6>=6.6", "sounddevice>=0.4", "scipy>=1.10", "pasimple>=0.0.3"]
onnx = ["onnx>=1.16", "onnxruntime>=1.17", "onnxscript>=0.1"]
demo = ["gradio>=4.0"]
dev = ["pytest>=7", "ruff>=0.1", "matplotlib>=3.7"]
training = ["wandb", "hydra-core", "tqdm"]

[project.urls]
Homepage = "https://github.com/sderhy/morseformer"
Repository = "https://github.com/sderhy/morseformer"
Issues = "https://github.com/sderhy/morseformer/issues"

[project.scripts]
morseformer = "morseformer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["morseformer", "morse_synth", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
# PyTorch ecosystem conventions:
#   N812 — `import torch.nn.functional as F` is the canonical alias.
#   N806 — single-letter tensor-shape variables (B, T, K, D) are idiomatic.
#   N802 — test names often encode tensor dim names (e.g. preserves_T_and_D).
#   B905 — `zip(strict=)` is opt-in safety, not a defect.
ignore = ["N812", "N806", "N802", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
